--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   
   <body>
-    <video width="400" controls>
+    <video width="auto" height="100vh" controls>
   <source src="Cell-project/video.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
